@@ -52,6 +52,10 @@ namespace libtorrent
 	// in strict ansi mode
 	char* allocate_string_copy(char const* str);
 
+	// returns p + x such that the pointer is 8 bytes aligned
+	// x cannot be greater than 7
+	void* align_pointer(void* p);
+
 }
 
 #endif
